--- a/package.json
+++ b/package.json
@@ -3,12 +3,26 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
+    "dev": "astro dev" ,
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
+    
   },
   "dependencies": {
-    "astro": "^5.3.0"
+    "@astrojs/react": "^4.4.2",
+    "astro": "^5.3.0",
+    "autoprefixer": "^10.4.20",
+    "ogl": "^1.0.11",
+    "postcss": "^8.5.3",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
+    "@tailwindcss/vite": "^4.1.17",
+    "@types/react": "^19.2.4",
+    "@types/react-dom": "^19.2.3",
+    "tailwindcss": "^4.0.7"
   }
 }
